--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ org.gradle.parallel=true
 # Dependencies
 	fabric_version=0.79.0+1.19.4
 	scribe_version=0.1.0+1.19.4
+	parchment_version=1.19.3:2023.03.12
