--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	minecraft_version=1.20
+	minecraft_version=1.20.1
 	loader_version=0.14.21
 
 # Mod Properties
@@ -11,6 +11,6 @@ org.gradle.parallel=true
 	archives_base_name = template
 
 # Dependencies
-	fabric_version=0.83.0+1.20
-	scribe_version=1.20-0.4.1
+	fabric_version=0.86.1+1.20.1
+	scribe_version=1.20.1-0.5.0-alpha
 	parchment_version=1.20.1:2023.06.26
