--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.1-SNAPSHOT'
+	id 'fabric-loom' version '1.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -18,14 +18,9 @@ repositories {
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings loom.layered() {
-		officialMojangMappings()
-		parchment("org.parchmentmc.data:parchment-${project.parchment_version}@zip")
-	}
-
-	// Scribe
-	modApi "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
-	include "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
+	mappings loom.officialMojangMappings()
+	// Sketch
+	modApi "com.github.Team-Abode:sketch:${rootProject.sketch_version}"
 
 	// Fabric
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
@@ -45,14 +40,14 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
