--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	minecraft_version=1.20.1
-	loader_version=0.14.21
+	minecraft_version=1.20.5
+	loader_version=0.15.10
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -11,6 +11,5 @@ org.gradle.parallel=true
 	archives_base_name = template
 
 # Dependencies
-	fabric_version=0.86.1+1.20.1
-	scribe_version=1.20.1-0.5.0-alpha
-	parchment_version=1.20.1:2023.06.26
+	fabric_version=0.97.6+1.20.5
+	sketch_version=1.20.5-0.9.0
